Java Core fundamentals, Path, Files, FileReader